feat: menu management
